# BetterHomebrewBrowser

./: .gitignore  BetterHomebrewBrowser.yml  CMakeLists.txt  README.md  bootparam.yml  build.sh  clean.sh  funNamer.py  param.sfx
bhbb_dl/: .gitignore  CMakeLists.txt  SceLsdb.emd  bhbb_dl.emd  bhbb_dl.sfx  bhbb_dl.yml  bootparam.yml
bhbb_dl/include/: compressed_file.h  head_bin.h  installer.h  main.h  netutils.h  notice.h  notifmgr.h  offsets.h  promote.h  sha1.h  taskmgr.h  tgz.h  zip.h
bhbb_dl/src/: Archives.cpp  Archives.hpp  bhbb_dl.h  compressed_file.cpp  installer.cpp  libc2paf.c  list.cpp  list.hpp  main.c  main.cpp  main.hpp  net.c  net.cpp  net.h  net.hpp  notice.cpp  notifmgr.c  notifmgr.cpp  notifmgr.h  notifmgr.hpp  offsets.c  promote.c  promote.cpp  promote.h  queue.cpp  queue.hpp  sha1.c  taskmgr.c  tgz.cpp  zip.cpp  zip.h
bhbb_dl/src/minizip/: ioapi.c  zip.c
common/: bhbb_dl.h  dialog.cpp  dialog.h  print.h  queue.cpp
include/: bgdl.h  bhbb_locale.h  bhbb_plugin.h  bhbb_settings.h  cURLFile.h  common.h  common.hpp  csv.h  curl_file.h  db.h  db.hpp  dialog.h  downloader.h  downloader.hpp  error_codes.h  event.h  json.h  json.hpp  main.h  main.hpp  network.h  network.hpp  paf.hpp  parser.hpp  settings.h  settings.hpp  settingsmgr.hpp  tex_pool.h  utils.h  utils.hpp
include/db/: cbpsdb.h  psphbb.h  source.h  vhbd.h  vhbdb.h  vitadb.h
include/pages/: app_browser.h  app_viewer.h  apps_info_page.h  apps_page.h  home_page.hpp  image_viewer.h  multi_page_app_list.h  page.h  page.hpp  text_page.h  text_page.hpp  textf_page.h
libScePafPreload/: CMakeLists.txt
libScePafPreload/src/: main.c
libextractor/: CMakeLists.txt  libextractor.yml
libextractor/src/: libc2paf.c  main.c  zip.cpp  zip.h
libextractor/src/minizip/: ioapi.c
libextractor/usage/: CMakeLists.txt  libextractor.h  main.cpp
module/: libcurl.suprx  libextractor.suprx
resource/: bgvpk2.suprx  bhbb_plugin.rco  bhbb_plugin.xml  bhbb_settings.xml  settings.xml  vhbb_plugin.rco
resource/file/: bhbb_settings.xml
resource/locale/: de.xml  en.rcs  en.xml  es.xml  fi.xml  fr.xml  it.xml  ja.xml  ko.xml  pl.xml  ptbr.xml  ru.xml  zh.xml
resource/rco/src/: bhbb_plugin.xml
resource/rco/src/file/: bhbb_settings.xml
resource/rco/src/locale/: en.xml  es.xml  ja.xml
resource/src/: bhbb_plugin.xml  vhbb_plugin.xml
resource/src/locale/: en.rcs  en.xml  es.xml  ja.xml
sce_sys/livearea/contents/: template.xml
src/: Archives.cpp  Archives.hpp  arith64.c  audiomgr.cpp  audiomgr.hpp  bgdl.c  bgdl.h  cURLFile.cpp  common.hpp  configmgr.cpp  configmgr.hpp  csv.c  csv.h  curl_file.cpp  db.cpp  dialog.cpp  downloader.cpp  event.cpp  eventhandler.cpp  eventhandler.hpp  fread_csv_line.c  fread_line.c  json.cpp  main.cpp  main.hpp  network.cpp  network.hpp  paf.cpp  paf.hpp  paf_internal.hpp  paf_runtime.c  paf_runtime.cpp  pagemgr.cpp  pagemgr.hpp  parser.cpp  parser.hpp  settings.cpp  settingsmgr.cpp  split.c  tex_pool.cpp  (+5 more)
src/db/: cbpsdb.cpp  psphbb.cpp  source.cpp  vhbd.cpp  vhbdb.cpp  vitadb.cpp
src/pages/: app_browser.cpp  app_viewer.cpp  apps_info_page.cpp  apps_page.cpp  home_page.cpp  image_viewer.cpp  multi_page_app_list.cpp  page.cpp  text_page.cpp  textf_page.cpp
